--- a/vault/example-apps/secrets-as-env/deployment.yaml
+++ b/vault/example-apps/secrets-as-env/deployment.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: basic-secret
+  name: secrets-as-env
   labels:
-    app: basic-secret
+    app: secrets-as-env
 spec:
   selector:
     matchLabels:
-      app: basic-secret
+      app: secrets-as-env
   replicas: 1
   template:
     metadata:
       annotations:
         vault.hashicorp.com/agent-inject: "true"
         vault.hashicorp.com/tls-skip-verify: "true"
-        vault.hashicorp.com/agent-inject-secret-helloworld: "secret/basic-secret/helloworld"
+        vault.hashicorp.com/agent-inject-secret-helloworld: "secret/secrets-as-env/helloworld"
         vault.hashicorp.com/agent-inject-template-helloworld: |
-          {{ with secret "secret/basic-secret/helloworld" -}}
+          {{ with secret "secret/secrets-as-env/helloworld" -}}
           export USERNAME="{{ .Data.username }}"
           export PASSWORD="{{ .Data.password }}"
           {{- end }}
-        vault.hashicorp.com/role: "basic-secret-role"
+        vault.hashicorp.com/role: "secrets-as-env-role"
       labels:
-        app: basic-secret
+        app: secrets-as-env
     spec:
-      serviceAccountName: basic-secret
+      serviceAccountName: secrets-as-env
       containers:
       - name: app
         image: jweissig/app:0.0.1
@@ -34,6 +34,6 @@ spec:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: basic-secret
+  name: secrets-as-env
   labels:
-    app: basic-secret
+    app: secrets-as-env
